# deszo_english_app_grammar_feature_extractor

./: .gitignore  .lia.cache  CHANGELOG.md  MIGRATION_V2_TO_V3.md  MIGRATION_V3_TO_V5.md  README.md  __init__.py  __main__.py  page_out.json  pyproject.toml
coq/: .GrammarFeatureExtractorSpec.aux  GrammarFeatureExtractorSpec.glob  GrammarFeatureExtractorSpec.v  GrammarFeatureExtractorSpec.vo
docs/: architecture.md  grammar_feature_extractor_architecture.md  grammar_feature_extractor_architecture_next.md  testing.md
docs/architecture/: V5_HARDENING_CHANGELOG.md  V5_STRENGTHENING_REPORT.md  grammar_feature_extractor_architecture_v3_2.md  grammar_feature_extractor_architecture_v5.md
docs/guidelines/: runtime_metadata_guideline.md
docs/testing/: grammar_feature_extractor_testing.md
fixtures/inputs/: filtered_annotated_document.raw.json  filtered_annotated_document.v3.json  invalid_dependency_cycle.json  invalid_entity_span.json  invalid_head_out_of_range.json  (+9 more)
grammar_feature_extractor/: __init__.py  __main__.py
schema/: catalog_feature_paths.json  registered_construction_signatures.json  registered_enums.json
tests/: conftest.py  test_core.py  test_determinism.py  test_docs_testing_contract.py  test_hardening.py  test_new_features.py  test_output_schema_contract.py  test_predicates.py  test_proof_surface.py  test_runtime_metadata.py  test_serialization_cli.py  test_stanza_handoff.py  test_syntax_base.py  test_validation.py
tmp_outdir/: grammar_features.manifest.json  grammar_features.page_00001.json
tools/: report_grammar_feature_quality.py
(+150 files in other folders)
